src/ui/voting/tests/snapshots/ppoker__ui__voting__tests__After cancel.snap
---
source: src/ui/voting/tests/mod.rs
assertion_line: 918
expression: terminal.backend()
---
"╭Overview──────────────────────────────────────────────────────────────────────╮"
"│Name: test | Room: Planning Room | Server: wss://mocked | State: Playing |    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭Players───────╮╭Your vote───────────────╮                                      "
"│Name    Vote  ││        ██████          │                                      "
"│              ││        ██              │                                      "
"│other   -     ││        █████           │                                      "
"│test    5     ││            ██          │                                      "
"│              ││            ██          │                                      "
"│              ││        ██  ██          │                                      "
"│              ││         ████           │                                      "
"│              │╰────────────────────────╯                                      "
"│              │╭Log───────────────────────────────────────────────────────────╮"
"│              ││[Server]: test joined the room                                │"
"│              ││[Server]: other joined the room                               │"
"│              ││[Server]: test played a card                                  │"
"╰──────────────╯╰──────────────────────────────────────────────────────────────╯"
"                                                                                "
" Vote | Reveal | History | Name change | Chat | Quit                            "
"                                                                                "
