src/ui/voting/tests/snapshots/ppoker__ui__voting__tests__After reveal.snap
---
source: src/ui/voting/tests/mod.rs
assertion_line: 822
expression: terminal.backend()
---
"╭Overview──────────────────────────────────────────────────────────────────────╮"
"│Name: test | Room: Planning Room | Server: wss://mocked | State: Waiting |    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭Players───────╮╭Your vote──────────╮╭Vote distribution───╮╭Average vote───────╮"
"│Name   Vote   ││     ██████        ││            ██      ││██████           ██│"
"│              ││     ██            ││            ██      ││██              ██ │"
"│test   5      ││     █████         ││            ██      ││█████           ██ │"
"│              ││         ██        ││            ██      ││    ██          ██ │"
"│              ││         ██        ││            ██      ││    ██          ███│"
"│              ││     ██  ██        ││            ██      ││██  ██    ██    ███│"
"│              ││      ████         ││            5█      ││ ████     ██     ██│"
"│              │╰───────────────────╯╰────────────────────╯╰───────────────────╯"
"│              │╭Log───────────────────────────────────────────────────────────╮"
"│              ││[Server]: test joined the room                                │"
"│              ││[Server]: test played a card                                  │"
"│              ││[Server]: test revealed all cards                             │"
"╰──────────────╯╰──────────────────────────────────────────────────────────────╯"
"                                                                                "
" Restart | History | Name change | Chat | Quit                                  "
"                                                                                "
