src/ui/voting/tests/snapshots/ppoker__ui__voting__tests__After voting with spectator.snap
---
source: src/ui/voting/tests/mod.rs
assertion_line: 937
expression: terminal.backend()
---
"╭Overview──────────────────────────────────────────────────────────────────────╮"
"│Name: test | Room: Planning Room | Server: wss://mocked | State: Playing |    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭Players───────╮╭Your vote───────────────╮                                      "
"│Name   Vote   ││         ████           │                                      "
"│              ││        ██  ██          │                                      "
"│test   3      ││            ██          │                                      "
"│              ││          ███           │                                      "
"│              ││            ██          │                                      "
"│              ││        ██  ██          │                                      "
"│              ││         ████           │                                      "
"│              │╰────────────────────────╯                                      "
"│              │╭Log───────────────────────────────────────────────────────────╮"
"│              ││[Client]: Your vote is the last one missing.                  │"
"│              ││[Server]: test joined the room                                │"
"╰──────────────╯│[Server]: viewer joined as spectator                          │"
"╭Spectators────╮│[Server]: test played a card                                  │"
"│Name          ││                                                              │"
"│              ││                                                              │"
"│viewer        ││                                                              │"
"│              ││                                                              │"
"╰──────────────╯╰──────────────────────────────────────────────────────────────╯"
"╭─────────────────────────────────Confirmation─────────────────────────────────╮"
"│              Automatically revealing cards in 3 seconds. Yes/No              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
