src/ui/voting/tests/snapshots/ppoker__ui__voting__tests__Initial with spectator.snap
---
source: src/ui/voting/tests/mod.rs
assertion_line: 932
expression: terminal.backend()
---
"╭Overview──────────────────────────────────────────────────────────────────────╮"
"│Name: test | Room: Planning Room | Server: wss://mocked | State: Playing |    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭Players───────╮╭Your vote───────────────╮                                      "
"│Name   Vote   ││                        │                                      "
"│              ││                        │                                      "
"│test   -      ││                        │                                      "
"│              ││        ██████          │                                      "
"│              ││                        │                                      "
"│              ││                        │                                      "
"│              ││                        │                                      "
"│              │╰────────────────────────╯                                      "
"│              │╭Log───────────────────────────────────────────────────────────╮"
"│              ││[Client]: Your vote is the last one missing.                  │"
"│              ││[Server]: test joined the room                                │"
"╰──────────────╯│[Server]: viewer joined as spectator                          │"
"╭Spectators────╮│                                                              │"
"│Name          ││                                                              │"
"│              ││                                                              │"
"│viewer        ││                                                              │"
"│              ││                                                              │"
"╰──────────────╯╰──────────────────────────────────────────────────────────────╯"
"                                                                                "
" Vote | Reveal | History | Name change | Chat | Quit                            "
"                                                                                "
