src/ui/voting/tests/snapshots/ppoker__ui__voting__tests__Quit confirmation dialog.snap
---
source: src/ui/voting/tests/mod.rs
assertion_line: 961
expression: terminal.backend()
---
"╭Overview──────────────────────────────────────────────────────────────────────╮"
"│Name: test | Room: Planning Room | Server: wss://mocked | State: Playing |    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭Players───────╮╭Your vote───────────────╮                                      "
"│Name   Vote   ││                        │                                      "
"│              ││                        │                                      "
"│test   -      ││                        │                                      "
"│              ││        ██████          │                                      "
"│              ││                        │                                      "
"│              ││                        │                                      "
"│              ││                        │                                      "
"│              │╰────────────────────────╯                                      "
"│              │╭Log───────────────────────────────────────────────────────────╮"
"│              ││[Server]: test joined the room                                │"
"│              ││                                                              │"
"│              ││                                                              │"
"╰──────────────╯╰──────────────────────────────────────────────────────────────╯"
"╭─────────────────────────────────Confirmation─────────────────────────────────╮"
"│                       Confirm you want to quit? Yes/No                       │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
